--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,6 @@
 server {
-  listen ${NGINX_PORT} default_server;
-  listen [::]:${NGINX_PORT} default_server;
+  listen 80 default_server;
+  listen [::]:80 default_server;
   server_name ${NGINX_HOST};
 
   location ~ ^/([0-9]+)/(.*)$ {
