feat: Add expire time flag.

--- a/default.conf
+++ b/default.conf
@@ -11,6 +11,6 @@ server {
     image_filter resize $width -;
     image_filter_buffer 100M;
     image_filter_jpeg_quality 95;
-    expires 5d;
+    expires ${EXPIRE_TIME};
   }
 }
