--- a/default.conf
+++ b/default.conf
@@ -10,7 +10,7 @@ server {
     proxy_pass ${IMAGE_HOST};
     image_filter resize $width -;
     image_filter_buffer 100M;
-    image_filter_jpeg_quality 95;
+    image_filter_jpeg_quality ${JPG_QUALITY};
     expires ${EXPIRE_TIME};
   }
 }
