feat(nginx): support proxy cache.

--- a/default.conf
+++ b/default.conf
@@ -1,7 +1,9 @@
+proxy_cache_path /data keys_zone=cache_zone:10m;
+
 server {
-  listen 80 default_server;
-  listen [::]:80 default_server;
-  server_name ${NGINX_HOST};
+  # Internal image resizing server.
+  server_name localhost;
+  listen 8888;
 
   location ~ ^/([0-9]+)/(.*)$ {
     set $width $1;
@@ -11,6 +13,25 @@ server {
     image_filter resize $width -;
     image_filter_buffer 100M;
     image_filter_jpeg_quality ${JPG_QUALITY};
+  }
+}
+
+
+server {
+  listen 80 default_server;
+  listen [::]:80 default_server;
+  server_name ${NGINX_HOST};
+
+  location ~ ^/([0-9]+)/(.*)$ {
+    set $width $1;
+    set $path $2;
+    rewrite ^ /$path break;
+    proxy_pass http://127.0.0.1:8888/$width/$path;
+    proxy_cache cache_zone;
+    proxy_cache_key $uri;
+    proxy_cache_valid 200 302 24h;
+    proxy_cache_valid 404 1m;
+    # expire time for browser
     expires ${EXPIRE_TIME};
   }
 }
