feat: Clean up the headers going to and from S3.

--- a/default.conf
+++ b/default.conf
@@ -5,6 +5,13 @@ server {
   server_name localhost;
   listen 8888;
 
+  # Clean up the headers going to and from S3.
+  proxy_hide_header "x-amz-id-2";
+  proxy_hide_header "x-amz-request-id";
+  proxy_hide_header "x-amz-storage-class";
+  proxy_hide_header "Set-Cookie";
+  proxy_ignore_headers "Set-Cookie";
+
   location ~ ^/([0-9]+)/(.*)$ {
     set $width $1;
     set $path $2;
