--- a/default.conf
+++ b/default.conf
@@ -21,8 +21,18 @@ server {
     image_filter_buffer 100M;
     image_filter_jpeg_quality ${JPG_QUALITY};
   }
-}
 
+  location ~ ^/([0-9]+)x([0-9]+)/(.*)$ {
+    set $width $1;
+    set $height $2;
+    set $path $3;
+    rewrite ^ /$path break;
+    proxy_pass ${IMAGE_HOST};
+    image_filter resize $width $height;
+    image_filter_buffer 100M;
+    image_filter_jpeg_quality ${JPG_QUALITY};
+  }
+}
 
 server {
   listen 80 default_server;
@@ -35,7 +45,19 @@ server {
     rewrite ^ /$path break;
     proxy_pass http://127.0.0.1:8888/$width/$path;
     proxy_cache cache_zone;
-    proxy_cache_key $uri;
+    proxy_cache_valid 200 302 24h;
+    proxy_cache_valid 404 1m;
+    # expire time for browser
+    expires ${EXPIRE_TIME};
+  }
+
+  location ~ ^/([0-9]+)x([0-9]+)/(.*)$ {
+    set $width $1;
+    set $height $2;
+    set $path $3;
+    rewrite ^ /$path break;
+    proxy_pass http://127.0.0.1:8888/${width}x${height}/$path;
+    proxy_cache cache_zone;
     proxy_cache_valid 200 302 24h;
     proxy_cache_valid 404 1m;
     # expire time for browser
