--- a/default.conf
+++ b/default.conf
@@ -1,4 +1,4 @@
-proxy_cache_path /data keys_zone=cache_zone:${CACHE_SZIE}m inactive=30d;
+proxy_cache_path /data keys_zone=cache_zone:${MEMORY_SIZE}m inactive=30d;
 
 server {
   # Internal image resizing server.
