feat(cache): add cache name setting

--- a/default.conf
+++ b/default.conf
@@ -1,4 +1,4 @@
-proxy_cache_path /data keys_zone=cache_zone:${MEMORY_SIZE}m inactive=30d;
+proxy_cache_path /data keys_zone=${CACHE_NAME}:${MEMORY_SIZE}m inactive=30d;
 
 server {
   # Internal image resizing server.
@@ -44,7 +44,7 @@ server {
     set $path $2;
     rewrite ^ /$path break;
     proxy_pass http://127.0.0.1:8888/$width/$path;
-    proxy_cache cache_zone;
+    proxy_cache ${CACHE_NAME};
     proxy_cache_valid 200 302 24h;
     proxy_cache_valid 404 1m;
     # expire time for browser
@@ -57,7 +57,7 @@ server {
     set $path $3;
     rewrite ^ /$path break;
     proxy_pass http://127.0.0.1:8888/${width}x${height}/$path;
-    proxy_cache cache_zone;
+    proxy_cache ${CACHE_NAME};
     proxy_cache_valid 200 302 24h;
     proxy_cache_valid 404 1m;
     # expire time for browser
