feat(cache): add cache size variable.

--- a/default.conf
+++ b/default.conf
@@ -1,4 +1,4 @@
-proxy_cache_path /data keys_zone=${CACHE_NAME}:${MEMORY_SIZE}m inactive=30d;
+proxy_cache_path /data keys_zone=${CACHE_NAME}:${MEMORY_SIZE}m inactive=30d max_size=${CACHE_SIZE};
 
 server {
   # Internal image resizing server.
