add cache data container.
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,12 @@ services:
     container_name: image-resizer
     ports:
       - "8002:80"
+    volumes:
+      - cache-data:/data
     environment:
       IMAGE_HOST: http://minio:9000
       NGINX_HOST: localhost
 
 volumes:
   minio-data:
+  cache-data:
