only work from 127.0.0.1 for image server.
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/default.conf
+++ b/default.conf
@@ -1,9 +1,9 @@
 proxy_cache_path /data keys_zone=${CACHE_NAME}:${MEMORY_SIZE} inactive=30d max_size=${CACHE_SIZE};
 
 server {
-  # Internal image resizing server.
-  server_name localhost;
   listen 8888;
+  allow 127.0.0.1;
+  deny all;
 
   # Clean up the headers going to and from S3.
   proxy_hide_header "x-amz-id-2";
