--- a/default.conf
+++ b/default.conf
@@ -39,6 +39,7 @@ server {
   listen [::]:80 default_server;
   server_name ${NGINX_HOST};
 
+  add_header X-Cache-status $upstream_cache_status;
   location ~ ^/([0-9]+)/(.*)$ {
     set $width $1;
     set $path $2;
