change default loger
Signed-off-by: Bo-Yi Wu <appleboy.tw@gmail.com>

--- a/default.conf
+++ b/default.conf
@@ -4,6 +4,7 @@ server {
   listen 8888;
   allow 127.0.0.1;
   deny all;
+  access_log  /var/log/nginx/resizer.log  main;
 
   # Clean up the headers going to and from S3.
   proxy_hide_header "x-amz-id-2";
@@ -36,8 +37,8 @@ server {
 
 server {
   listen 80 default_server;
-  listen [::]:80 default_server;
   server_name ${NGINX_HOST};
+  access_log  /var/log/nginx/proxy.log  main;
 
   add_header X-Cache-status $upstream_cache_status;
   location ~ ^/([0-9]+)/(.*)$ {
