--- a/nginx.conf
+++ b/nginx.conf
@@ -19,10 +19,9 @@ http {
                     '$status $body_bytes_sent "$http_referer" '
                     '"$http_user_agent" "$http_x_forwarded_for"';
 
-  access_log  /var/log/nginx/access.log  main;
-
-  sendfile        on;
-  #tcp_nopush     on;
+  sendfile     on;
+  tcp_nopush   on;
+  tcp_nodelay  on;
 
   keepalive_timeout  65;
 
