feat: add inactive time

--- a/default.conf
+++ b/default.conf
@@ -1,10 +1,10 @@
-proxy_cache_path /data keys_zone=${CACHE_NAME}:${MEMORY_SIZE} inactive=30d max_size=${CACHE_SIZE};
+proxy_cache_path /data keys_zone=${CACHE_NAME}:${MEMORY_SIZE} inactive=${INACTIVE_TIME} max_size=${CACHE_SIZE};
 
 server {
   listen 8888;
   allow 127.0.0.1;
   deny all;
-  access_log  /var/log/nginx/resizer.log  main;
+  access_log /var/log/nginx/resizer.log main;
 
   # Clean up the headers going to and from S3.
   proxy_hide_header "x-amz-id-2";
@@ -38,7 +38,7 @@ server {
 server {
   listen 80 default_server;
   server_name ${NGINX_HOST};
-  access_log  /var/log/nginx/proxy.log  main;
+  access_log /var/log/nginx/proxy.log main;
 
   add_header X-Cache-status $upstream_cache_status;
   location ~ ^/([0-9]+)/(.*)$ {
