--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,9 @@ services:
     image: minio/minio
     container_name: minio
     ports:
-      - 9000:9000
+      - "9000:9000"
+      - "9001:9001"
+
     volumes:
       - minio-data:/data
     logging:
@@ -14,9 +16,9 @@ services:
         max-size: "1k"
         max-file: "3"
     environment:
-      MINIO_ACCESS_KEY: YOUR_MINIO_ACCESS_KEY
-      MINIO_SECRET_KEY: YOUR_MINIO_SECRET_KEY
-    command: server /data
+      MINIO_ACCESS_KEY: minio
+      MINIO_SECRET_KEY: miniominio
+    command: server --console-address ":9001" /data
 
   image-resizer:
     image: appleboy/nginx-image-resizer
