--- a/default.conf
+++ b/default.conf
@@ -41,6 +41,7 @@ server {
   access_log /var/log/nginx/proxy.log main;
 
   add_header X-Cache-status $upstream_cache_status;
+
   location ~ ^/([0-9]+)/(.*)$ {
     set $width $1;
     set $path $2;
@@ -65,4 +66,14 @@ server {
     # expire time for browser
     expires ${EXPIRE_TIME};
   }
+  location ~ ^/(.*)$ {
+    set $path $1;
+    rewrite ^ /$path break;
+    proxy_pass http://127.0.0.1:8888/${arg_width}x${arg_height}/$path;
+    proxy_cache ${CACHE_NAME};
+    proxy_cache_valid 200 302 24h;
+    proxy_cache_valid 404 1m;
+    # expire time for browser
+    expires ${EXPIRE_TIME};
+  }  
 }
