feat : add crop command to config

--- a/default.conf
+++ b/default.conf
@@ -30,9 +30,13 @@ server {
     rewrite ^ /$path break;
     proxy_pass ${IMAGE_HOST};
     image_filter resize $width $height;
+    ## when need crop image and not need to save aspect ratio should change "resize" to "crop"
+    #     image_filter crop $width $height;
     image_filter_buffer 100M;
     image_filter_jpeg_quality ${JPG_QUALITY};
   }
+
+  
 }
 
 server {
