feat : add crop option into the query param

--- a/default.conf
+++ b/default.conf
@@ -30,8 +30,17 @@ server {
     rewrite ^ /$path break;
     proxy_pass ${IMAGE_HOST};
     image_filter resize $width $height;
-    ## when need crop image and not need to save aspect ratio should change "resize" to "crop"
-    #     image_filter crop $width $height;
+
+    image_filter_buffer 100M;
+    image_filter_jpeg_quality ${JPG_QUALITY};
+  }
+  location ~ ^/crop/([0-9]+)x([0-9]+)/(.*)$ {
+    set $width $1;
+    set $height $2;
+    set $path $3;
+    rewrite ^ /$path break;
+    proxy_pass ${IMAGE_HOST};
+    image_filter crop $width $height;
     image_filter_buffer 100M;
     image_filter_jpeg_quality ${JPG_QUALITY};
   }
@@ -73,11 +82,17 @@ server {
   location ~ ^/(.*)$ {
     set $path $1;
     rewrite ^ /$path break;
-    proxy_pass http://127.0.0.1:8888/${arg_width}x${arg_height}/$path;
     proxy_cache ${CACHE_NAME};
     proxy_cache_valid 200 302 24h;
     proxy_cache_valid 404 1m;
     # expire time for browser
+    proxy_pass http://127.0.0.1:8888/${arg_width}x${arg_height}/$path;
     expires ${EXPIRE_TIME};
+    if ( $arg_crop = true ){
+      proxy_pass http://127.0.0.1:8888/crop/${arg_width}x${arg_height}/$path;
+      break;
+    }
+
+
   }  
 }
