--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
-version: '3'
+version: "3"
 
 services:
   minio:
-    image: minio/minio
+    image: quay.io/minio/minio:RELEASE.2024-01-29T03-56-32Z
     container_name: minio
     ports:
-      - 9000:9000
+      - "9000:9000"
+      - "9001:9001"
     volumes:
       - minio-data:/data
     logging:
@@ -14,12 +15,12 @@ services:
         max-size: "1k"
         max-file: "3"
     environment:
-      MINIO_ACCESS_KEY: YOUR_MINIO_ACCESS_KEY
-      MINIO_SECRET_KEY: YOUR_MINIO_SECRET_KEY
-    command: server /data
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: test123456
+    command: server /data --console-address ":9001"
 
   image-resizer:
-    image: appleboy/nginx-image-resizer
+    image: ghcr.io/appleboy/nginx-image-resizer:latest
     container_name: image-resizer
     ports:
       - 8002:80
